[package]
name = "serene-reactions"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = "0.8.9"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
